# 3dof

./: README.md
install/: local_setup.sh  setup.sh
install/3dof/lib/3dof/: operacion  trajectory_publisher
install/3dof/share/3dof/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/3dof/share/3dof/launch/: visualization.launch.py
log/: latest_build
src/3dof/: setup.cfg  setup.py
src/3dof/config/: config.rviz  joint_controller.yaml
src/3dof/launch/: gazebo.launch.py
src/3dof/urdf/: 3dof_core.xacro  control.xacro  inertial.xacro  robot.urdf  robot.xacro  sensor.xacro
src/3dof/urdf/extra/: plugins.urdf  plugins.xacro  pure.xacro  pure_tf.urdf  three_dof.urdf
